...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="I97-Nn-Vdn">
                                                    <rect key="frame" x="311" y="11" width="51" height="31"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="allDaySwitchId"/>
                                                </switch>
                                            </subviews>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Events" id="FO4-Sa-7Ck">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="TVQ-bC-ijR">
                            <connections>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iZh-mU-RWw">
                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="detailTitleTextId"/>
...
                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uPf-GH-7ml">
                                            <rect key="frame" x="310" y="6" width="51" height="31"/>
                                            <accessibility key="accessibilityConfiguration" identifier="detailAllDaySwitchId"/>
                                            <connections>
                                                <action selector="switchValueChanged:" destination="unZ-fj-6uo" eventType="valueChanged" id="7KJ-Te-zvs"/>
...
                                    </constraints>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="detailDateCellId">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                    </constraints>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="detailDatePickerCellId">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Event" id="pkq-4M-fIz">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="6th-rO-8uG">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add" id="jzs-5a-U9o">
                            <connections>
                                <segue destination="V6X-8b-tTR" kind="unwind" unwindAction="unwindToEventListWithSender:" id="L2w-50-3uk"/>
...
